fix(slider): align merged tooltip arrows with thumbs

--- a/src/components/slider/range-slider-tooltip.scss
+++ b/src/components/slider/range-slider-tooltip.scss
@@ -46,6 +46,68 @@
     height: 100%;
 }
 
+// When the endpoint tooltips merge into one box, keep a distinct arrow pointing
+// at each thumb instead of a single arrow centred on the merged box. The offset
+// is half the on-track distance between the two thumbs (0 when the arrow axis
+// does not match the track axis), supplied by the collision composable.
+.rp-range-slider__tooltip--merged.rp-tooltip--arrow {
+    .rp-tooltip__content::before,
+    .rp-tooltip__content::after {
+        position: absolute;
+        width: var(--_rp-tooltip-arrow-size);
+        height: var(--_rp-tooltip-arrow-size);
+        content: '';
+        background-color: inherit;
+        rotate: 45deg;
+    }
+
+    &.rp-tooltip--placement-top,
+    &.rp-tooltip--placement-bottom {
+        .rp-tooltip__content::before {
+            left: calc(50% - var(--_rp-range-slider-tooltip-merged-arrow-offset, 0px));
+            translate: -50% 0;
+        }
+
+        .rp-tooltip__content::after {
+            left: calc(50% + var(--_rp-range-slider-tooltip-merged-arrow-offset, 0px));
+            translate: -50% 0;
+        }
+    }
+
+    &.rp-tooltip--placement-top .rp-tooltip__content::before,
+    &.rp-tooltip--placement-top .rp-tooltip__content::after {
+        top: calc(100% - var(--_rp-tooltip-arrow-size) / 2);
+    }
+
+    &.rp-tooltip--placement-bottom .rp-tooltip__content::before,
+    &.rp-tooltip--placement-bottom .rp-tooltip__content::after {
+        bottom: calc(100% - var(--_rp-tooltip-arrow-size) / 2);
+    }
+
+    &.rp-tooltip--placement-left,
+    &.rp-tooltip--placement-right {
+        .rp-tooltip__content::before {
+            top: calc(50% + var(--_rp-range-slider-tooltip-merged-arrow-offset, 0px));
+            translate: 0 -50%;
+        }
+
+        .rp-tooltip__content::after {
+            top: calc(50% - var(--_rp-range-slider-tooltip-merged-arrow-offset, 0px));
+            translate: 0 -50%;
+        }
+    }
+
+    &.rp-tooltip--placement-left .rp-tooltip__content::before,
+    &.rp-tooltip--placement-left .rp-tooltip__content::after {
+        left: calc(100% - var(--_rp-tooltip-arrow-size) / 2);
+    }
+
+    &.rp-tooltip--placement-right .rp-tooltip__content::before,
+    &.rp-tooltip--placement-right .rp-tooltip__content::after {
+        right: calc(100% - var(--_rp-tooltip-arrow-size) / 2);
+    }
+}
+
 .rp-range-slider__tooltips--overlapping {
     .rp-range-slider__tooltip--lower,
     .rp-range-slider__tooltip--upper {
